--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "sass-mercury",
-    "version": "2.0.0-rc.3",
+    "version": "2.0.0",
     "description": "Mercury - Sass mixins & functions library!",
     "ignore": [
         "*.md",
