--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,22 @@
     "name": "sass-mercury",
     "version": "2.0.2",
     "description": "Mercury - Sass mixins & functions library!",
+    "main": [
+        "_helpers.scss",
+        "_mercury.scss",
+        "_mercury.scss",
+        "functions/_em.scss",
+        "functions/_rem.scss",
+        "mixins/_breakpoint.scss",
+        "mixins/_font-face.scss",
+        "mixins/_gradient.scss",
+        "mixins/_grid.scss",
+        "mixins/_opacity.scss",
+        "mixins/_rem-size.scss",
+        "mixins/_retina.scss",
+        "mixins/_retina-compass.scss",
+        "mixins/_selection.scss"
+    ],
     "ignore": [
         "*.md",
         ".gitignore",
