--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "sass-mercury",
-    "version": "2.0.3",
+    "version": "2.1.0",
     "description": "Mercury - Sass mixins & functions library!",
     "main": [
         "_helpers.scss",
@@ -20,14 +20,13 @@
     ],
     "ignore": [
         "*.md",
-        ".gitignore",
-        "README.md"
+        ".gitignore"
     ],
     "keywords": [
-        "mercury",
-        "sass",
+        "functions",
         "library",
+        "mercury",
         "mixins",
-        "functions"
+        "sass"
     ]
 }
