--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "sass-mercury",
-    "version": "2.1.2",
+    "version": "2.1.3-beta.1",
     "description": "Mercury - Sass mixins & functions library!",
     "main": [
         "_helpers.scss",
