--- a/package.json
+++ b/package.json
@@ -2,7 +2,20 @@
   "name": "sass-mercury",
   "version": "2.1.4",
   "description": "Mercury - Sass mixins & functions library!",
-  "main": "_mercury.scss",
+  "main": [
+    "_helpers.scss",
+    "_mercury.scss",
+    "functions/_em.scss",
+    "functions/_rem.scss",
+    "mixins/_breakpoint.scss",
+    "mixins/_font-face.scss",
+    "mixins/_gradient.scss",
+    "mixins/_grid.scss",
+    "mixins/_opacity.scss",
+    "mixins/_rem-size.scss",
+    "mixins/_retina.scss",
+    "mixins/_selection.scss"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/agenceepsilon/sass-mercury.git"
