--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
     "name": "sass-mercury",
-    "version": "2.1.5",
+    "version": "2.1.6",
     "description": "Mercury - Sass mixins & functions library!",
     "main": [
         "_helpers.scss",
-        "_mercury.scss",
-        "functions/_em.scss",
-        "functions/_rem.scss",
-        "mixins/_breakpoint.scss",
-        "mixins/_font-face.scss",
-        "mixins/_gradient.scss",
-        "mixins/_grid.scss",
-        "mixins/_opacity.scss",
-        "mixins/_rem-size.scss",
-        "mixins/_retina.scss",
-        "mixins/_selection.scss"
+        "_mercury.scss"
     ],
     "repository": {
         "type": "git",
