--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     },
     "homepage": "https://github.com/agenceepsilon/sass-mercury#readme",
     "devDependencies": {
-        "node-sass": "^4.11.0"
+        "node-sass": "^4.12.0"
+    },
+    "dependencies": {
+        "sass": "^1.22.7"
     }
 }
