--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
     "name": "sass-mercury",
-    "version": "2.1.7",
+    "version": "2.1.8",
     "description": "Mercury - Sass mixins & functions library!",
-    "main": [
-        "_helpers.scss",
-        "_mercury.scss"
-    ],
+    "main": "_mercury.scss",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/agenceepsilon/sass-mercury.git"
