--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "sass-mercury",
     "version": "2.2.0",
     "description": "Mercury - Sass mixins & functions library!",
+    "scripts": {
+        "lint:css": "stylelint --fix \"**/*.scss\""
+    },
     "main": "_mercury.scss",
     "repository": {
         "type": "git",
@@ -21,8 +24,15 @@
         "url": "https://github.com/agenceepsilon/sass-mercury/issues"
     },
     "homepage": "https://github.com/agenceepsilon/sass-mercury#readme",
+    "engines": {
+        "node": ">=10.0.0",
+        "npm": ">=6.0.0"
+    },
     "devDependencies": {
-        "node-sass": "^4.12.0"
+        "node-sass": "^4.12.0",
+        "stylelint": "^11.0.0",
+        "stylelint-config-standard": "^19.0.0",
+        "stylelint-scss": "^3.11.1"
     },
     "dependencies": {
         "sass": "^1.22.10"
