--- a/package.json
+++ b/package.json
@@ -1,29 +1,11 @@
 {
     "name": "sass-mercury",
-    "version": "2.2.1",
     "description": "Mercury - Sass mixins & functions library!",
+    "version": "2.2.1",
     "scripts": {
         "lint:css": "stylelint --fix \"**/*.scss\""
     },
     "main": "_mercury.scss",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/agenceepsilon/sass-mercury.git"
-    },
-    "keywords": [
-        "breakpoint",
-        "functions",
-        "library",
-        "mercury",
-        "mixins",
-        "sass"
-    ],
-    "author": "Boris Damevin",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/agenceepsilon/sass-mercury/issues"
-    },
-    "homepage": "https://github.com/agenceepsilon/sass-mercury#readme",
     "engines": {
         "node": ">=10.0.0",
         "npm": ">=6.0.0"
@@ -35,5 +17,24 @@
     },
     "dependencies": {
         "sass": "^1.25.0"
+    },
+    "keywords": [
+        "css",
+        "sass",
+        "front-end",
+        "responsive",
+        "mixins",
+        "functions",
+        "library"
+    ],
+    "author": "Boris Damevin",
+    "license": "MIT",
+    "homepage": "https://github.com/agenceepsilon/sass-mercury",
+    "bugs": {
+        "url": "https://github.com/agenceepsilon/sass-mercury/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/agenceepsilon/sass-mercury.git"
     }
 }
